test/resources/parser/failing/FunDefError1.grading.amy
object FunDef
  def foo: Int(32) := 42 end foo
end FunDef
